[package]
name = "ironbench"
version = "0.1.0"
edition = "2018"

[dependencies]
hyper = { version = "0.14.24", features = ["server", "http1", "tcp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.15.0", features = ["full"] }

[dependencies.rusqlite]
version = "0.29.0"
features = ["bundled"]